# Hand_Drawn_Maps_Monte-Carlo-Localization

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Landmark based Localization utilizing Monte Carlo Localization.docx  Makefile  README.md  TemplateMatching.cpp  TemplateMatching.h  cmake_install.cmake  mapMatch  matchRobot.cpp  mcl  mcl.cpp  robotMatch  tempMatch
Gazebo/devel/: .catkin  .rosinstall  setup.sh
TestingResults/: Test 1.ods  Test 3.ods  Test 4.ods  Test 5.ods  Test 6.ods  Test 7.ods  Test 8.ods  Test 9.ods
TestingSpreadSheets/: Test 2.ods
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
mantis_model/: CHANGELOG.rst  CMakeLists.txt  package.xml
mantis_model/launch/: mantis_gazebo.launch  mantis_visual.launch
mantis_model/src/: MantisStatePub.cpp  MantisStatePub.h  mantis_state_pub.cpp
mantis_model/urdf/: mantis.urdf.xacro  mantis_control.urdf  mantis_gazebo.urdf  mantis_sensors.urdf.xacro  mantis_visual.urdf.xacro
mantis_model/yaml/: laser_filter_params.yaml
ros/devel/: .catkin  .rosinstall  setup.sh
ros/src/mantis_model/: CMakeLists.txt
ros/src/mantis_model/launch/: mantis_gazebo.launch  mantis_visual.launch
ros/src/mantis_model/src/: MantisJointPub.cpp  MantisJointPub.h
ros/src/mantis_model/urdf/: mantis.urdf.xacro  mantis_gazebo.urdf.xacro  mantis_sensors.urdf.xacro  mantis_visual.urdf.xacro
src/sub/: CMakeLists.txt  TemplateMatching.cpp  TemplateMatching.h  control.cpp  feature.cpp  includes.h  main.cpp  mcl.cpp  mclmap.cpp  measurement_model.cpp  motion_model.cpp  particle.cpp  topic_publisher.cpp
(+30 files in other folders)
